# superset-magic

./: .gitignore  CLAUDE.md  CONCEPTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  dist-workspace.toml  ss-magic.code-workspace
.claude/: settings.json
.cursor/: BUGBOT.md
.github/workflows/: ci.yml  release.yml
.superset/: config.json  magic.json  magic.sh
assets/: setup.sh
docs/brainstorms/: 2026-06-17-ss-magic-rewrite-requirements.md
docs/ideation/: 2026-07-15-interactive-diff-merge-ui-ideation.html
docs/plans/: 2026-05-25-001-feat-superset-setup-cli-plan.md  2026-05-26-001-feat-config-json-setup-commands-picker-plan.md  2026-05-26-002-feat-apply-setup-executor-plan.md  2026-06-17-001-feat-ss-magic-self-updating-cli-plan.md  2026-06-18-001-docs-release-readme-and-docs-sync-plan.md  2026-06-28-001-fix-reverse-sync-gitignored-candidates-plan.md  2026-07-14-001-feat-ci-and-src-restructure-plan.md  2026-07-14-001-feat-pack-command-plan.md  2026-07-14-002-feat-release-artifact-attestations-plan.md  2026-07-16-001-feat-reverse-sync-merge-cockpit-plan.md
docs/solutions/design-patterns/: inquire-action-loop-2026-05-26.md  ratatui-popup-content-sizing.md  ratatui-terminal-restore-guard-ordering.md
docs/solutions/logic-errors/: merge-assembly-line-fusion-missing-separator.md  pack-backups-exclusion-must-guard-the-directory-walk.md  retention-must-know-every-layout-ever-written.md  reverse-sync-untracked-probe-excludes-gitignored-secrets.md  secret-gate-positive-tracked-determination-fail-closed.md  toctou-guard-review-time-baseline.md
docs/solutions/tooling-decisions/: rust-tar-bzip2-archive-crate-gotchas.md
src/: apply.rs  cli.rs  exec.rs  git.rs  gitignore.rs  main.rs  menu.rs  migrate.rs  pack.rs  repo_detect.rs  repo_scan.rs  reverse_sync.rs  superset_files.rs  test_support.rs  ui.rs
src/cli/: tests.rs
src/git/: gitignore.rs  mod.rs  tests.rs
src/git/gitignore/: tests.rs
src/pack/: tests.rs
src/sync/: apply.rs  merge.rs  mod.rs  pattern.rs  repo_scan.rs  reverse_sync.rs
src/sync/apply/: tests.rs
src/sync/merge/: tests.rs
src/sync/pattern/: tests.rs
src/sync/repo_scan/: tests.rs
src/sync/reverse_sync/: tests.rs
src/tests/: mod.rs  reverse_sync_flow.rs  support.rs  sync.rs  update_gate.rs
src/tui/: cockpit.rs  diffmodel.rs  menu.rs  mod.rs  style.rs  ui.rs
src/tui/cockpit/: tests.rs
src/tui/diffmodel/: tests.rs
src/tui/menu/: tests.rs
src/tui/style/: tests.rs
src/tui/ui/: tests.rs
src/update/: apply.rs  check.rs  mod.rs  tests.rs
src/update/apply/: tests.rs
src/update/check/: tests.rs
src/workspace/: migrate.rs  mod.rs  superset_files.rs
src/workspace/migrate/: tests.rs
src/workspace/superset_files/: tests.rs
