[package]
name = "ss-magic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ss-magic"
path = "src/main.rs"

[dependencies]
anyhow = "1"
directories = { version = "6.0.0", default-features = false }
fd-lock = "4.0.4"
globset = "0.4"
inquire = "0.9"
self_update = { version = "0.44.0", default-features = false, features = ["ureq", "rustls", "archive-tar", "compression-flate2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
supports-color = "3"
tempfile = "3"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
walkdir = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
