[package]
name = "ss-magic"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/ViktorStiskala/superset-magic"

[[bin]]
name = "ss-magic"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bzip2 = "0.6"
directories = { version = "6.0.0", default-features = false }
fd-lock = "4.0.4"
globset = "0.4"
inquire = "0.9"
self_update = { version = "0.44.0", default-features = false, features = ["ureq", "rustls", "archive-tar", "compression-flate2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
supports-color = "3"
tar = "0.4"
tempfile = "3"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
walkdir = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# cargo-dist builds release archives with `--profile dist`; inherit the
# size-optimized release profile so distributed binaries match local ones.
[profile.dist]
inherits = "release"
